--- a/src/components/Modals/Modal.css
+++ b/src/components/Modals/Modal.css
@@ -1,12 +1,12 @@
 .modal-container {
     position: fixed; 
-    z-index: 3;
+    z-index: 6;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%; 
     overflow: auto;
-    background-color: rgb(0,0,0);
+    overscroll-behavior: none;
     background-color: rgba(0,0,0,0.4);
 }
 
